# Clipboard_Manager

./: .gitignore  CMakeLists.txt  COMPLETE_PROJECT_GUIDE.md  Clipboard_Manager.code-workspace  README.md  binding.gyp  build.sh  history.json  history.txt  package-lock.json  package.json
ClipboardManager/: README.md
ClipboardManager/src/: main.cpp
ClipboardManager/src/clipboard_monitor/: ClipboardMonitor.cpp
ClipboardManager/src/gui/: MainWindow.cpp  MainWindow.h
cli/: CLI.cpp  CLI.h
clipboard-manager/src/history/: HistoryManager.h
clipboard-multi/: .gitignore  CHANGELOG.md  README.md  binding.gyp  clipboardDataProvider.js  clipboardSearchWebview.js  clipboard_history.json  extension.js  historyBackend.js  package-lock.json  package.json
clipboard-multi/test/: multiline-test.js
data/: history.txt
include/: Item.h
src/: clipboard_addon.cpp  clipboard_core.cpp  clipboard_manager.h  main.cpp
src/advanced_features/: AdvancedFeatures.cpp  AdvancedFeatures.h
src/cli/: CLI.cpp  CLI.h
src/clipboard_monitor/: ClipboardMonitor.cpp  ClipboardMonitor.h
src/history/: HistoryManager.cpp
src/history_manager/: HistoryManager.cpp  HistoryManager.h
src/node_addon/: clipboard_addon.cpp
test/: test.js
